tests/integration/snapshots/integration__parse_failure__exponent_missing_trailing_digits.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
98e
stderr ---
error: expected +/- or digit after exponent indicator, found no significant characters
 --> stdin:1:3
  |
1 | 98e
  | --^
  | | |
  | | exponent indicator found here
  | number with exponent found here
  |
help: add placeholder exponent digits
  |
1 | 98e+1
  |    ++
